--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- header -->
     <header class="container-fluid header">
         <h1>Accueil</h1>
+        <img src="./img/" alt="">
         <br>
         <input type="checkbox" id="menu">
         <label for="menu" class="iconNav">
