Add footer style

--- a/index.html
+++ b/index.html
@@ -195,40 +195,38 @@
         <!-- end Carousel -->
     </main>
 
-    <footer class="container-fluid footer">
-        <nav>
+    <footer class="container-fluid">
+        <div>
+            <hr>
             <div>
-                <hr>
-                <div>
-                    <img src="./img/icons8-feather-60.png" alt="">
-                    <h4>Site</h4>
-                </div>
-                <hr>
-                <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Gallerie</a></li>
-                    <li><a href="#">Escapade</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Incription</a></li>
-                </ul>
+                <img src="./img/icons8-feather-60.png" alt="">
+                <h4>Site</h4>
             </div>
+            <hr>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Gallerie</a></li>
+                <li><a href="#">Escapade</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Incription</a></li>
+            </ul>
+        </div>
+        <div>
+            <hr>
             <div>
-                <hr>
-                <div>
-                    <img src="./img/icons8-livres-100.png" alt="">
-                    <h4>Proverbes</h4>
-                </div>
-                <hr>
-                <ul>
-                    <li><a href="#">Couple</a></li>
-                    <li><a href="#">Famille</a></li>
-                    <li><a href="#">Enfants</a></li>
-                    <li><a href="#">Amitié</a></li>
-                    <li><a href="#">Emploi</a></li>
-                </ul>
+                <img src="./img/icons8-livres-100.png" alt="">
+                <h4>Proverbes</h4>
             </div>
-            <br>
-        </nav>
+            <hr>
+            <ul>
+                <li><a href="#">Couple</a></li>
+                <li><a href="#">Famille</a></li>
+                <li><a href="#">Enfants</a></li>
+                <li><a href="#">Amitié</a></li>
+                <li><a href="#">Emploi</a></li>
+            </ul>
+        </div>
+        <br>
         <hr>
         <span>Copyright 2022 - tous droits réservés.</span>
     </footer>
