--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 <div id="carouselInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="./img/forestInkPaint.png" class="d-block w-100 carousel-img2 " alt="...">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="./img/fogland.png" class="d-block w-100 carousel-img" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="./img/cafeFleuri.png" class="d-block w-100 carousel-img" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselInterval"
@@ -87,7 +87,7 @@
                 <img class="ban" src="./img/plume.png" alt="Bannière">
             </div>
             <div class="inner-banner">
-                <h2 id="plume">La <strong>Plume</strong></h2>
+                <h2 class="plume" id="plume">La <strong>Plume</strong></h2>
                 <p> L'association des Proverbes </p>
             </div>
         </section>
