--- a/index.html
+++ b/index.html
@@ -58,17 +58,18 @@
     <main>
         <!-- banner -->
         <section class="container-fluid banner">
-            <div class="carousel">
+            <div class="carousel-ban">
                 <div id="carouselInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./img/forestInkPaint.png" class="d-block w-100 carousel-img2 " alt="...">
+                            <img src="./img/forestInkPaint.png" class="d-block w-100 carousel-img2 "
+                                alt="Peinture d'un forêt">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./img/fogland.png" class="d-block w-100 carousel-img" alt="...">
+                            <img src="./img/fogland.png" class="d-block w-100 carousel-img" alt="Brume des landes">
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/cafeFleuri.png" class="d-block w-100 carousel-img" alt="...">
+                            <img src="./img/cafeFleuri.png" class="d-block w-100 carousel-img" alt="Café fleuri">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselInterval"
@@ -100,7 +101,7 @@
             </div>
             <div class="container">
                 <div class="row aboutInfo">
-                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 about-article">
                         <div class="iconBox">
                             <img class="iconImg" src="./img/robin.png" alt="Robin Bird" id="robin">
                         </div>
@@ -137,20 +138,20 @@
                         <div class="imgBox">
                             <img class="imgDecoration" src="./img/nest2.png" alt="Dessin d'un nids">
                         </div>
-                        <hr>
+                        <hr class="under-nest">
                     </article>
-                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 invitation-article">
                         <div class="imgBox">
                             <img class="iconImg" src="./img/greenColibri.png" alt="Green-Colibri" id="invitation">
+                        </div>
+                        <div class="invitation">
+                            <h3 class="about-title2"> ... Invitation ... </h3>
+                            <hr>
+                            <br>
                             <div class="icon-anchor4">
                                 <a href="#gallerie"><img class="arrow-orientation" src="./icons/south.png"
                                         alt="south-arrow"></a>
                             </div>
-                        </div>
-                        <div>
-                            <h3 class="about-title"> ... Invitation ... </h3>
-                            <hr>
-                            <br>
                         </div>
                         <div class="p3">
                             <div class="p">
@@ -164,7 +165,7 @@
                                 </p>
                                 <br>
                                 <div class="imgBox">
-                                    <img class="iconImg" src="./img/listen.png"
+                                    <img class="text-img" src="./img/listen.png"
                                         alt="Dessin d'un homme qui tend l'oreille">
                                 </div>
                                 <p>
@@ -214,6 +215,14 @@
                 <li class="bg04"><span>Un peu d'histoire</span></li>
                 <li class="bg05"><span>Education</span></li>
             </ul>
+
+            <!-- <div class="break-carousel-image">
+                <a href=""><img src="./img/harvest.png" alt=""></a>
+                <a href=""><img src="./img/" alt=""></a>
+                <a href=""><img src="./img/" alt=""></a>
+                <a href=""><img src="./img/" alt=""></a>
+                <a href=""><img src="./img/" alt=""></a>
+            </div> -->
 
             <div class="icon-anchor5">
                 <a href="#header"><img class="arrow-orientation" src="./icons/north.png" alt="south-arrow"
