Add Carousel media Query Big Size

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <!-- Carousel -->
         <section class="carousel">
-            <h2 id="gallerie">Visitez notre gallerie</h2>
+            <h3 id="gallerie">Visitez notre gallerie</h3>
 
             <input type="radio" id="inp01Alpha" name="inp" checked="checked">
             <input type="radio" id="inp02Alpha" name="inp">
@@ -209,20 +209,24 @@
             </div>
 
             <ul class="bgs">
-                <li class="bg01"><a href="#"></a> <span>Grandir</span></li>
+                <li class="bg01"><a href="#"></a><span>Grandir</span></li>
                 <li class="bg02"><span>Se réunir</span></li>
                 <li class="bg03"><span>Nous Contacter</span></li>
                 <li class="bg04"><span>Un peu d'histoire</span></li>
                 <li class="bg05"><span>Education</span></li>
             </ul>
 
-            <!-- <div class="break-carousel-image">
-                <a href=""><img src="./img/harvest.png" alt=""></a>
-                <a href=""><img src="./img/" alt=""></a>
-                <a href=""><img src="./img/" alt=""></a>
-                <a href=""><img src="./img/" alt=""></a>
-                <a href=""><img src="./img/" alt=""></a>
-            </div> -->
+            <div class="break-carousel">
+                <ul>
+                    <li><a href=""><img class="break-carousel-img" src="./img/nest2.png" alt="nids"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/harvest.png" alt="buisson"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/birdMessenger.png"
+                                alt="chouette messagère"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/birdALittleHistory.png"
+                                alt="chouette professeur"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/nest.png" alt="nids"></a></li>
+                </ul>
+            </div>
 
             <div class="icon-anchor5">
                 <a href="#header"><img class="arrow-orientation" src="./icons/north.png" alt="south-arrow"
