Add Footer media query big size

--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
             </div>
 
             <ul class="bgs">
-                <li class="bg01"><a href="#"></a><span>Grandir</span></li>
-                <li class="bg02"><span>Se réunir</span></li>
-                <li class="bg03"><span>Nous Contacter</span></li>
-                <li class="bg04"><span>Un peu d'histoire</span></li>
-                <li class="bg05"><span>Education</span></li>
+                <li class="bg01"><a href="#"><span>Grandir</span></a></li>
+                <li class="bg02"><a href="#"><span>Se réunir</span></a></li>
+                <li class="bg03"><a href="#"><span>Nous Contacter</span></a></li>
+                <li class="bg04"><a href="#"><span>Un peu d'histoire</span></a></li>
+                <li class="bg05"><a href="#"><span>Education</span></a></li>
             </ul>
 
             <div class="break-carousel">
@@ -237,35 +237,37 @@
     </main>
 
     <footer class="container-fluid">
-        <div>
-            <hr>
-            <div>
-                <img src="./img/icons8-feather-60.png" alt="">
-                <h4>Site</h4>
+        <div class="footer-contain">
+            <div class="footer-box">
+                <hr>
+                <div>
+                    <img src="./img/icons8-feather-60.png" alt="">
+                    <h4>Site</h4>
+                </div>
+                <hr>
+                <ul>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Gallerie</a></li>
+                    <li><a href="#">Escapade</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Incription</a></li>
+                </ul>
             </div>
-            <hr>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Gallerie</a></li>
-                <li><a href="#">Escapade</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Incription</a></li>
-            </ul>
-        </div>
-        <div>
-            <hr>
-            <div>
-                <img src="./img/icons8-livres-100.png" alt="">
-                <h4>Proverbes</h4>
+            <div class="footer-box">
+                <hr>
+                <div>
+                    <img src="./img/icons8-livres-100.png" alt="">
+                    <h4>Proverbes</h4>
+                </div>
+                <hr>
+                <ul>
+                    <li><a href="#">Couple</a></li>
+                    <li><a href="#">Famille</a></li>
+                    <li><a href="#">Enfants</a></li>
+                    <li><a href="#">Amitié</a></li>
+                    <li><a href="#">Emploi</a></li>
+                </ul>
             </div>
-            <hr>
-            <ul>
-                <li><a href="#">Couple</a></li>
-                <li><a href="#">Famille</a></li>
-                <li><a href="#">Enfants</a></li>
-                <li><a href="#">Amitié</a></li>
-                <li><a href="#">Emploi</a></li>
-            </ul>
         </div>
         <br>
         <hr>
