Add title html property to break-carousel-img

--- a/index.html
+++ b/index.html
@@ -218,13 +218,16 @@
 
             <div class="break-carousel">
                 <ul>
-                    <li><a href=""><img class="break-carousel-img" src="./img/nest2.png" alt="nids"></a></li>
-                    <li><a href=""><img class="break-carousel-img" src="./img/harvest.png" alt="buisson"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/nest2.png" alt="nids"
+                                title="Se réunir"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/harvest.png" alt="buisson"
+                                title="Grandir"></a></li>
                     <li><a href=""><img class="break-carousel-img" src="./img/birdMessenger.png"
-                                alt="chouette messagère"></a></li>
+                                alt="chouette messagère" title="Nous contacter"></a></li>
                     <li><a href=""><img class="break-carousel-img" src="./img/birdALittleHistory.png"
-                                alt="chouette professeur"></a></li>
-                    <li><a href=""><img class="break-carousel-img" src="./img/nest.png" alt="nids"></a></li>
+                                alt="chouette professeur" title="Un peu d'histoire"></a></li>
+                    <li><a href=""><img class="break-carousel-img" src="./img/nest.png" alt="nids"
+                                title="Education"></a></li>
                 </ul>
             </div>
 
