--- a/escales.html
+++ b/escales.html
@@ -28,7 +28,7 @@
     <!-- header -->
     <header class="container-fluid header">
         <div class="mainTitle">
-            <h1 id="header">Accueil</h1>
+            <h1 id="header">Escales</h1>
             <div class="img-anchor">
                 <a href="index.html"><img class="arrow-feather" src="./img/plume.png" alt="Bannière"></a>
             </div>
@@ -59,123 +59,23 @@
     <main>
         <!-- banner -->
         <section class="container-fluid banner">
-            <div class="carousel-ban">
-                <div id="carouselInterval" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="10000">
-                            <img src="./img/forestInkPaint.png" class="d-block w-100 carousel-img2 "
-                                alt="Peinture d'un forêt">
-                        </div>
-                        <div class="carousel-item" data-bs-interval="2000">
-                            <img src="./img/fogland.png" class="d-block w-100 carousel-img" alt="Brume des landes">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./img/cafeFleuri.png" class="d-block w-100 carousel-img" alt="Café fleuri">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselInterval"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselInterval"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
-            <div class="ban">
-                <img class="ban" src="./img/plume.png" alt="Bannière">
-            </div>
             <div class="inner-banner">
-                <h2 class="plume" id="plume">La <strong>Plume</strong></h2>
-                <p> L'association des Proverbes </p>
+                <h2 class="plume" id="plume">Au <strong>Berceau d'amitiés</strong></h2>
+                <p>Serez-vous du voyage ?</p>
             </div>
         </section>
         <!-- end banner -->
 
         <!-- About -->
-        <section class="container-fluid about">
+        <section class="container-fluid">
             <div class="container">
-                <div class="row aboutInfo">
-                    <h2>Débutez la visite par ici ...</h2>
-                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 about-article">
-                        <div class="iconBox">
-                            <img class="iconImg" src="./img/robin.png" alt="Robin Bird" id="robin">
-                        </div>
-                        <div>
-                            <h3 class="about-title"> Qui sommes nous ? </h3>
-                            <hr>
-                            <br>
-                            <p class="proverbe"><strong>"Ne recherchez pas seulement votre propre intérêt,
-                                    mais aussi celui de l'autre."</strong>
-                            </p>
-                            <br>
-                        </div>
-                        <div>
-                            <p>En se basant sur ce principe,
-                                l'association "<strong><em><span>la Plume</span></em></strong>" réunit des
-                                dizaines de personnes ordinaires à travers le pays, dans le but d'échanger
-                                sur la sagesse utile dans notre <strong>quotidien</strong>.
-                            </p>
-                        </div>
-                        <br>
-                        <div class="p2">
-                            <p>
-                                En gros... <br>
-                                Des gens simples.<br>
-                                En clair... <br>
-                                ... de la <strong>convivialité</strong>.
-                            </p>
-                        </div>
-                        <br>
-                        <div class="icon-anchor3">
-                            <a href="#invitation"><img class="arrow-orientation" src="./icons/south.png"
-                                    alt="south-arrow"></a>
-                        </div>
-                        <div class="imgBox">
-                            <img class="imgDecoration" src="./img/nest2.png" alt="Dessin d'un nids">
-                        </div>
-                        <hr class="under-nest">
+                <div class="row">
+                    <h2>...</h2>
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+
                     </article>
-                    <div class="icon-anchor2">
-                        <a href="#robin"><img class="arrow-orientation" src="./icons/south.png" alt="south-arrow"></a>
-                    </div>
-                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 invitation-article">
-                        <div class="imgBox">
-                            <img class="iconImg" src="./img/greenColibri.png" alt="Green-Colibri" id="invitation">
-                        </div>
-                        <div class="invitation">
-                            <h3 class="about-title2"> ... Invitation ... </h3>
-                            <hr>
-                            <br>
-                            <div class="icon-anchor4">
-                                <a href="#gallerie"><img class="arrow-orientation" src="./icons/south.png"
-                                        alt="south-arrow"></a>
-                            </div>
-                        </div>
-                        <div class="p3">
-                            <div class="p">
-                                <p>
-                                    - Venez échanger sur les conseils que nous prodigue les
-                                    <strong><em><span>proverbes d'antan</span></em></strong>.
-                                </p>
-                                <br>
-                                <p>
-                                    - Pas des belles paroles pour se faire caresser l'oreille !
-                                </p>
-                                <br>
-                                <div class="imgBox">
-                                    <img class="text-img" src="./img/listen.png"
-                                        alt="Dessin d'un homme qui tend l'oreille">
-                                </div>
-                                <p>
-                                    - Mais des gens sincères, en quêtes de <strong>sages conseils</strong>
-                                    à mettre en pratique dans leur vie, dans le but de l'améliorer.
-                                </p>
-                            </div>
-                        </div>
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+
                     </article>
                 </div>
             </div>
